<resources>
    <string name="app_name">Qupas Challenge</string>
    <string name="movies">Movies</string>
    <string name="favorites">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagemovie">imageMovie</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="backicon">backIcon</string>
    <string name="filtericon">filterIcon</string>
    <string name="arrowspinnericon">arrowSpinnerIcon</string>
    <string name="chooseYear">Choose Year</string>
    <string name="rating">Rating :</string>
    <string name="country">Country :</string>
    <string name="type">Type :</string>
    <string name="director">Director :</string>
    <string name="writer">Writer :</string>
    <string name="actors">Actors :</string>
    <string name="plot">Plot :</string>
    <string name="language">Language :</string>
    <string name="production">Production :</string>
    <string name="release">Release :</string>
    <string-array name="type_movies">
        <item>Choose Type</item>
        <item>Movie</item>
        <item>Series</item>
        <item>Episode</item>
    </string-array>
</resources>
