<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.activity.DetailActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/detailTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detailYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/detailRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/detailYear"
                        app:layout_constraintStart_toEndOf="@+id/detailYear"
                        app:layout_constraintTop_toTopOf="@+id/detailYear"/>

                    <TextView
                        android:id="@+id/detailGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailRating" />

                    <TextView
                        android:id="@+id/detailTitleDirectior"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/director"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailGenre" />

                    <TextView
                        android:id="@+id/detailDirectior"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@+id/detailTitleDirectior"
                        app:layout_constraintTop_toBottomOf="@+id/detailGenre" />

                    <TextView
                        android:id="@+id/detailTitleWriter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/writer"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailDirectior" />

                    <TextView
                        android:id="@+id/detailWriter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toEndOf="@+id/detailTitleWriter"
                        app:layout_constraintTop_toBottomOf="@+id/detailDirectior" />

                    <TextView
                        android:id="@+id/detailTitleActor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actors"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailWriter" />

                    <TextView
                        android:id="@+id/detailActor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toEndOf="@+id/detailTitleActor"
                        app:layout_constraintTop_toBottomOf="@+id/detailWriter" />

                    <TextView
                        android:id="@+id/detailTitlePlit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plot"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailActor" />

                    <TextView
                        android:id="@+id/detailPlot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toEndOf="@+id/detailTitlePlit"
                        app:layout_constraintTop_toBottomOf="@+id/detailActor" />

                    <TextView
                        android:id="@+id/detailTitleCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailPlot" />

                    <TextView
                        android:id="@+id/detailCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toEndOf="@+id/detailTitleCountry"
                        app:layout_constraintTop_toBottomOf="@+id/detailPlot" />

                    <TextView
                        android:id="@+id/detailTitleLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailCountry" />

                    <TextView
                        android:id="@+id/detailLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toEndOf="@+id/detailTitleLanguage"
                        app:layout_constraintTop_toBottomOf="@+id/detailCountry" />

                    <TextView
                        android:id="@+id/detailTitleProduction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/production"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailLanguage" />

                    <TextView
                        android:id="@+id/detailProduction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toEndOf="@+id/detailTitleProduction"
                        app:layout_constraintTop_toBottomOf="@+id/detailLanguage" />

                    <TextView
                        android:id="@+id/detailTitleRelease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailProduction" />

                    <TextView
                        android:id="@+id/detailRelease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toEndOf="@+id/detailTitleRelease"
                        app:layout_constraintTop_toBottomOf="@+id/detailProduction" />

                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.AppBarLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/imagemovie"
                android:scaleType="centerCrop"
                app:layout_scrollFlags="scroll|enterAlways" />

        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>